#18 - added Book and PaginationMeta schemas to OpenAPI spec
